--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.65.1",
-    "react-native-pgp": "^0.0.5"
+    "react-native-virgil-crypto": "^0.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
