--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-encrypted-storage": "^4.0.2",
     "react-native-virgil-crypto": "^0.6.1"
   },
   "devDependencies": {
