--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@types/react-native-vector-icons": "^6.4.8",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-encrypted-storage": "^4.0.2",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-virgil-crypto": "^0.6.1"
   },
   "devDependencies": {
