--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@types/react-native-vector-icons": "^6.4.8",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-camera": "^4.1.1",
     "react-native-encrypted-storage": "^4.0.2",
+    "react-native-permissions": "^3.0.5",
+    "react-native-qrcode-scanner": "^1.5.4",
     "react-native-vector-icons": "^8.1.0",
     "react-native-virgil-crypto": "^0.6.1"
   },
