--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.65.1",
     "react-native-camera": "^4.1.1",
     "react-native-encrypted-storage": "^4.0.2",
+    "react-native-modal": "^13.0.0",
     "react-native-permissions": "^3.0.5",
     "react-native-qrcode-scanner": "^1.5.4",
     "react-native-vector-icons": "^8.1.0",
